# box

./: .gitignore  Cargo.toml  README.md  Rocket.toml  build.gradle  micronaut-cli.yml  settings.gradle
.github/workflows/: release.yml
src/: file.rs  handlers.rs  main.rs  settings.rs
src/main/java/kz/ilotterytea/box/: BoxApplication.java  BoxProperties.java
src/main/java/kz/ilotterytea/box/components/: CollectorComponent.java
src/main/java/kz/ilotterytea/box/controllers/: FileServerController.java  ThymeleafController.java
src/main/java/kz/ilotterytea/box/models/: FileDataModel.java  ResponseModel.java
src/main/java/kz/ilotterytea/box/utils/: HashUtils.java  KeyUtils.java
src/main/java/kz/ilotterytea/hashedpictures/: Application.java  ApplicationProperties.java  HashedpicturesController.java
src/main/java/kz/ilotterytea/hashedpictures/controller/: APIController.java
src/main/java/kz/ilotterytea/hashedpictures/entities/: File.java
src/main/java/kz/ilotterytea/hashedpictures/schemas/: Payload.java
src/main/java/kz/ilotterytea/hashedpictures/utils/: HibernateUtil.java
src/main/resources/: application.properties  application.yml
src/main/resources/static/css/: style.css
src/main/resources/templates/: index.html
src/test/java/kz/ilotterytea/box/: BoxApplicationTests.java
src/test/java/kz/ilotterytea/hashedpictures/: HashedpicturesTest.java
views/: index.html.hbs
