[package]
name = "litterbox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["json"] }
rand = "0.8.5"
mime_guess = "2.0.4"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["handlebars"] }
